@@ -3,6 +3,9 @@ Released on 2021-02-15?
 ======================================
 
 
+bpo-23544: Disable Debug=>Stack Viewer when user code is running or
+Debugger is active, to prevent hang or crash.  Patch by Zackery Spytz.
+
 bpo-43008: Make IDLE invoke :func:`sys.excepthook` in normal,
 2-process mode.
 
